[gd_scene load_steps=60 format=2]

[ext_resource path="res://Player/Char_3.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Hitbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Art/MediumShadow.png" type="Texture" id=4]
[ext_resource path="res://Player/Dash.tres" type="Resource" id=5]
[ext_resource path="res://InputBuffer.tscn" type="PackedScene" id=6]
[ext_resource path="res://Player/Combat.tres" type="Resource" id=7]
[ext_resource path="res://Player/Movement.tres" type="Resource" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Block"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 54 ]
}

[sub_resource type="Animation" id=2]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 9, 10 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Dash"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16 ]
}

[sub_resource type="Animation" id=4]
resource_name = "DashBack"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=5]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 45 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitboxPivot/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=7]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 44 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitboxPivot/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=8]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 19 ]
}

[sub_resource type="Animation" id=9]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 36 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitboxPivot/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("CombatBuffer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.1 ],
"method": "freeze"
} ]
}

[sub_resource type="Animation" id=10]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 38 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitboxPivot/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("CombatBuffer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.1 ],
"method": "freeze"
} ]
}

[sub_resource type="Animation" id=11]
resource_name = "Punch3"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 37, 39 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitboxPivot/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("CombatBuffer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.1 ],
"method": "freeze"
} ]
}

[sub_resource type="Animation" id=12]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 37, 39 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitboxPivot/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("EffectSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("EffectSprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.05, 0.15, 0.25, 0.35 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 108, 109, 111, 110 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("CombatBuffer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.5 ],
"method": "freeze"
} ]
}

[sub_resource type="Animation" id=13]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 42 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitboxPivot/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("CombatBuffer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.1 ],
"method": "freeze"
} ]
}

[sub_resource type="Animation" id=14]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 40, 41 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HitboxPivot/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("CombatBuffer")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.3 ],
"method": "freeze"
} ]
}

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "Block"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "Breach"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "Dash"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "DashBack"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "Move"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "Punch1"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "Punch2"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "Punch3"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "SuperPunch"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "Uppercut1"

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=27]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=28]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=44]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachineTransition" id=47]

[sub_resource type="AnimationNodeStateMachine" id=48]
states/Block/node = SubResource( 15 )
states/Block/position = Vector2( 104.109, -115.817 )
states/Breach/node = SubResource( 16 )
states/Breach/position = Vector2( 416.109, -85.912 )
states/Dash/node = SubResource( 17 )
states/Dash/position = Vector2( 184.109, -518.817 )
states/DashBack/node = SubResource( 18 )
states/DashBack/position = Vector2( -169.891, -26.817 )
states/Move/node = SubResource( 19 )
states/Move/position = Vector2( 221.065, 171.088 )
states/Punch1/node = SubResource( 20 )
states/Punch1/position = Vector2( 551, 125 )
states/Punch2/node = SubResource( 21 )
states/Punch2/position = Vector2( 698, 125 )
states/Punch3/node = SubResource( 22 )
states/Punch3/position = Vector2( 862.109, 125 )
states/SuperPunch/node = SubResource( 23 )
states/SuperPunch/position = Vector2( 980.109, -207.817 )
states/Uppercut1/node = SubResource( 24 )
states/Uppercut1/position = Vector2( 641.5, -425.278 )
transitions = [ "Punch1", "Punch2", SubResource( 25 ), "Punch1", "Breach", SubResource( 26 ), "Punch2", "Breach", SubResource( 27 ), "Uppercut1", "Breach", SubResource( 28 ), "Breach", "Move", SubResource( 29 ), "Move", "Breach", SubResource( 30 ), "Move", "Punch1", SubResource( 31 ), "Move", "Uppercut1", SubResource( 32 ), "Breach", "Block", SubResource( 33 ), "Move", "Block", SubResource( 34 ), "Block", "Move", SubResource( 35 ), "Block", "Breach", SubResource( 36 ), "Block", "Dash", SubResource( 37 ), "Dash", "Breach", SubResource( 38 ), "Block", "DashBack", SubResource( 39 ), "DashBack", "Breach", SubResource( 40 ), "Dash", "Uppercut1", SubResource( 41 ), "Punch2", "Punch3", SubResource( 42 ), "Punch3", "Breach", SubResource( 43 ), "SuperPunch", "Breach", SubResource( 44 ), "Uppercut1", "SuperPunch", SubResource( 45 ), "Punch3", "Uppercut1", SubResource( 46 ), "Uppercut1", "Punch2", SubResource( 47 ) ]
start_node = "Breach"
graph_offset = Vector2( -135.891, -506.817 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=49]

[sub_resource type="RectangleShape2D" id=50]
extents = Vector2( 1.28999, 2.96128 )

[sub_resource type="CapsuleShape2D" id=51]
radius = 4.21867
height = 12.379

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 16
hframes = 18
frame = 13

[node name="ShadowSprite" type="Sprite" parent="."]
scale = Vector2( 2, 1 )
texture = ExtResource( 4 )
offset = Vector2( 0, 21 )

[node name="EffectSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
vframes = 16
hframes = 18
frame = 110

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Block = SubResource( 1 )
anims/Breach = SubResource( 2 )
anims/Dash = SubResource( 3 )
anims/DashBack = SubResource( 4 )
anims/Idle = SubResource( 5 )
anims/Kick1 = SubResource( 6 )
anims/Kick2 = SubResource( 7 )
anims/Move = SubResource( 8 )
anims/Punch1 = SubResource( 9 )
anims/Punch2 = SubResource( 10 )
anims/Punch3 = SubResource( 11 )
anims/SuperPunch = SubResource( 12 )
anims/Uppercut1 = SubResource( 13 )
anims/Uppercut2 = SubResource( 14 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 48 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 49 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0898743, 17.5861 )
rotation = 1.5708
shape = SubResource( 50 )

[node name="HitboxPivot" type="Position2D" parent="."]
position = Vector2( 0, 18 )

[node name="Hitbox" parent="HitboxPivot" instance=ExtResource( 3 )]
position = Vector2( 9, 0 )
collision_layer = 0
collision_mask = 8
sprite_path = NodePath("../../Sprite")

[node name="CollisionShape2D" parent="HitboxPivot/Hitbox" index="0"]
rotation = 1.5708
shape = SubResource( 51 )

[node name="CombatBuffer" parent="." instance=ExtResource( 6 )]
valid_inputs = PoolStringArray( "punch", "kick", "block" )
combos = ExtResource( 7 )

[node name="MovementBuffer" parent="." instance=ExtResource( 6 )]
valid_inputs = PoolStringArray( "up", "down", "left", "right" )
combos = ExtResource( 8 )

[node name="DashBuffer" parent="." instance=ExtResource( 6 )]
valid_inputs = PoolStringArray( "punch", "kick" )
combos = ExtResource( 5 )

[node name="Hitlag" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="HitboxPivot/Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="action_just_pressed" from="CombatBuffer" to="." method="_on_CombatBuffer_action_just_pressed"]
[connection signal="action_just_released" from="CombatBuffer" to="." method="_on_CombatBuffer_action_just_released"]
[connection signal="movement" from="CombatBuffer" to="." method="_on_CombatBuffer_movement"]
[connection signal="pause" from="CombatBuffer" to="." method="_on_CombatBuffer_pause"]
[connection signal="movement" from="MovementBuffer" to="." method="_on_MovementBuffer_movement"]
[connection signal="movement" from="DashBuffer" to="." method="_on_DashBuffer_movement"]
[connection signal="timeout" from="Hitlag" to="." method="_on_Hitlag_timeout"]

[editable path="HitboxPivot/Hitbox"]
